Added chatGPT API Call

--- a/rsocketserver/src/main/resources/application.yml
+++ b/rsocketserver/src/main/resources/application.yml
@@ -5,3 +5,5 @@ spring:
     server:
       port: 8080
       transport: websocket
+openai:
+  apikey: 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
