--- a/rsocketserver/pom.xml
+++ b/rsocketserver/pom.xml
@@ -27,6 +27,19 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20231013</version>
+		</dependency>
+		
+		<dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+    		<version>4.5.14</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
