--- a/rsocketclient/package.json
+++ b/rsocketclient/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "react": "17.0.2",
